--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8"
-          name="viewport"
-          content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="google" content="notranslate">
+  <head>
+    <meta
+      charset="UTF-8"
+      name="viewport"
+      content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1"
+    />
+    <meta name="google" content="notranslate" />
 
     <title>Fredy</title>
-</head>
-<body theme-mode="dark">
-
-<div id="fredy" style="position: absolute;top: 0;left: 0;right: 0;bottom: 0;"></div>
-</body>
-<script type="module" src="/ui/src/Index.jsx"></script>
+  </head>
+  <body theme-mode="dark">
+    <div id="fredy" style="position: absolute; top: 0; left: 0; right: 0; bottom: 0"></div>
+  </body>
+  <script type="module" src="/ui/src/Index.jsx"></script>
 </html>
