--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
       content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1"
     />
     <meta name="google" content="notranslate" />
+      <meta name="apple-mobile-web-app-capable" content="yes" />
+      <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
-    <title>Fredy</title>
+      <title>Fredy || Real Estate Finder</title>
   </head>
   <body theme-mode="dark">
     <div id="fredy" style="position: absolute; top: 0; left: 0; right: 0; bottom: 0"></div>
   </body>
   <script type="module" src="/ui/src/Index.jsx"></script>
 </html>
+
